--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.jpg" />
 	<link rel="stylesheet" href="/global.css">
 	<meta name="viewport" content="width=device-width" />
-	<title>crippa1337's casino</title>
+	<title>Casino 1337</title>
 	%sveltekit.head%
 </head>
 
